src/App.css
.app-container {
  display: flex;
  height: 100vh;
  width: 100%;
}

.sidebar {
  width: 200px;
  background: #f4f4f4;
  position: relative;
  transition: width 0.3s ease;
}

.sidebar.collapsed {
  width: 45px;
  span { display: none; }
}

.sidebar.collapsed .menu-text {
  display: none;
}

.collapse-btn {
  position: absolute;
  top: 10px;
  right: -23px; /* pushes it outside edge */
  
  background: #007bff;
  border: none;
  color: white;
  width: 25px;
  height: 25px;

  display: flex;
  align-items: center;
  justify-content: center;

  border-radius: 20%;
  cursor: pointer;
  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
}

.collapse-btn:hover {
  background: #0056b3;
  transform: scale(1.05);
}

.sidebar ul {
  list-style: none;
  padding: 0;
  margin: 0;
  flex: 0;
}


.main-content {
  padding: 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
}

.menu-item {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 10px;
  cursor: pointer;
  border-radius: 6px;
  text-decoration: none;
  color: inherit;
}

.menu-item:hover {
  background-color: #f0f0f0;
}

.active {
  color: #007bff;
  font-weight: bold;
}

.subcategory {
  margin-left: 16px;
  margin-top: 6px;
  padding-left: 8px;
  border-left: 2px solid #eee;
}

.subcategory li {
  list-style: none;
}

.subcategory-link {
  display: block;
  padding: 6px 10px;
  margin: 4px 0;
  font-size: 14px;
  color: #555;
  text-decoration: none;
  border-radius: 6px;
  transition: all 0.2s ease;
}

.subcategory-link:hover {
  background-color: #f5f5f5;
  color: #000;
  transform: translateX(2px);
}

.subcategory-link.active {
  background-color: #e7f1ff;
  color: #007bff;
  font-weight: 600;
}

